--- a/tasks.html
+++ b/tasks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tasks-Ethnus</title>
+<title>Tasks</title>
 <style>
   body {
     background-image: url(https://c4.wallpaperflare.com/wallpaper/903/77/147/digital-art-nature-mountains-minimalism-wallpaper-preview.jpg);
