--- a/CSS/task7C.html
+++ b/CSS/task7C.html
@@ -93,7 +93,8 @@
                 </tr>
                 <tr>
                     <td><label for="ad">About</label></td>
-                    <td><textarea>Write About Yourself</textarea></td>
+                    <td><textarea placeholder="Write About Yourself"></textarea></td>
+
                 </tr>
             </table>
         </center>
