--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 <br>
-<h1>Tasks</h1>
+<h1 style="color: white;">Tasks</h1>
 
-<h2>HTML</h2>
+<h1 style="color: white;">HTML</h1>
 <a href="HTML/task1H.html">Task 1</a>
 
 <a href="HTML/task2H.html">Task 2</a>
@@ -32,7 +32,7 @@
 
 <a href="HTML/task5H.html">Task 5</a>
 
-<br><br><h2>CSS</h2>
+<h1 style="color: white;">CSS</h1>
 <a href="CSS/task1C.html">Task 1</a>
 
 <a href="CSS/task2C.html">Task 2</a>
